--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -42,11 +42,13 @@
     background-color: transparent;
     border: none;
     outline: 0!important;
+    text-align: left;
   
 }
 .show-task{
     outline: 0!important;
     border: none ;
+    text-align: left;
 
 }
 .show-card{
