--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -1,3 +1,5 @@
+
+
 .wrap-input{
     border:1px solid #1FB9C1;
     border-radius: 8px !important; 
@@ -90,7 +92,14 @@
     background-position: 90%;
     
 }
-
+.wrap-all-task{
+    min-width: 630px;
+    overflow-x: scroll;
+    height: 70%;
+}
+/* .wrap-all-task-width{
+    width: 900px;
+} */
 .css-yk16xz-control .css-g1d714-ValueContainer{
   justify-content: start !important;
 }
@@ -225,6 +234,26 @@
     text-transform: capitalize;
     padding-left: 59px;
 }
+.hr-place-holder{
+    margin-left: 25%;
+    border: 0;
+    clear: solid;
+    display: block;
+    width: 7vw;
+    background-color: #68C7CB;
+    height: 2px;
+}
+@media only screen and (max-width: 1100px) {
+    /* .wrap-all-task-width{
+        width: 900px;
+    } */
+    .propertiesAllTask{
+        padding-left: 0px !important;
+    }
+    .hr-place-holder{
+        width: 5vw !important;
+    }
+  }
 .btn-open-details .svg-inline--fa{
     vertical-align:-0.2em !important ;
 }
@@ -279,8 +308,3 @@ inner-addon {
     text-align: center !important;
 }
 
-@media only screen and (max-width: 700px) {
-    .input-group-task-not-belongs{
-      width: fit-content !important;
-    }
-  }
