--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -13,26 +13,19 @@
 
 
 .headerProjects{
-    height: 45px;
+    height: 64px;
 }
 
 .betweenHeaderProjects{
-    margin-top: 13px;
-    margin-right: 13px !important;
+    margin-top: 7px;
+    margin-right: 11px !important;
     justify-content: space-between;
     display: flex;
     margin-left: 2px;
+    /* border-bottom: 1px solid #75798E; */
     height: 54px;
-    width: auto;
-    background-color: hsla(196, 44%, 95%, 1);
-    height: fit-content;
-    margin-left: 1.08rem;
-    padding-left: 15px;
-    padding-bottom: 5px;
 }
-.projectForWorkspace:hover .progressProject {
-    background-color: rgb(233, 236, 239) !important;
-}
+
 #searchProject{
 display: inline-block;
 margin-right: 11px;
@@ -68,37 +61,6 @@ margin-right: 11px;
     padding-left: 18px;
     padding-right: 44px;
 }
-.inputSearchProject
-{
-    margin-top: 4px;
-    padding-top: 5px;
-
-}
-
-.inputSearchProject input , 
-.inputSearchProject div{
-    background-color: #b2b2b21f;
-}
-.inputSearchProject input{
-    border: none;
-    border-top-left-radius: 50rem !important;
-    border-bottom-left-radius: 50rem !important;
-    padding-left: 12px;
-    padding-bottom: 8px;
-    outline: none;
-    padding-right: 6px;
-    padding-top: 4px;
-}
-
-.inputSearchProject div{
-
-    border-top-right-radius: 50rem !important;
-    border-bottom-right-radius: 50rem !important;
-   
-    padding-right: 9px;
-    padding-top: 8px;
-    color: #0000006e;
-}
 
 /* .inputSearchProjects:hover {
   width: 300px;
@@ -110,13 +72,12 @@ margin-right: 11px;
     width: 135px;
     height: 40px;
     background: var(--unnamed-color-52c4a9) 0% 0% no-repeat padding-box;
-    background: #1FB9C1 0% 0% no-repeat padding-box;
+    background: #52C4A9 0% 0% no-repeat padding-box;
     border-radius: 5px;
     color:white;
     font: normal normal normal 16px/21px Roboto;
     letter-spacing: 0px;
     text-transform: capitalize;
-    padding: 0px;
 }
 .body .table-responsive{
     /* height: 65vh;
