--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -5,22 +5,21 @@
     margin-top: 2px;
 }
 .addTaskNotBelong{
-    /* background: url(../../../img/check-mark.svg) no-repeat ;
+    background: url(../../../img/check-mark.svg) no-repeat ;
     background-size: 18px 18px;
     background-position:left ;
-    padding-left: 20px  !important; */
+    padding-left: 20px  !important;
     border: none;
     width: 94%;
-    position: relative;
 }
-
+/* .wrap-input:focus,.wrap-input:hover{
+    border:2px solid #07a3ac !important;
+    border-radius: 8px !important; 
+} */
 .addTaskNotBelong:focus,.addTaskNotBelong:hover{
     outline: none !important;
 }
 .close-add-task{
-    position: absolute;
-    right: 5px;
-    bottom: 1px;
     margin-bottom: 2px;
     background-color: transparent;
     color: #C4CCD5;
@@ -76,21 +75,15 @@
     padding-left: 0px !important;
 }
 
-/* .selectWorkspaceInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row
+.selectWorkspaceInTasksNotBelong .css-yk16xz-control  .css-g1d714-ValueContainer  .css-1uccc91-singleValue .row
 {
-    margin-left: -7px;
-} */
-.wrap-not-belong .check-task{
-    padding-top:unset !important;
-    padding: 0 !important;
+    /* margin-left: -7px; */
 }
 .check-task .css-yk16xz-control{
     background: url(../../../img/down-arrow.svg) no-repeat ;
     background-size: 10px 10px;
     background-position: 90%;
-    
 }
-
 .css-yk16xz-control .css-g1d714-ValueContainer{
   justify-content: start !important;
 }
@@ -103,15 +96,9 @@
 .workspaceN{
     padding-left: 0px !important;
 }
-.select-not-belong{
-    width: 6vw;
-    white-space: nowrap;
-    overflow: hidden !important;
-    text-overflow: ellipsis;
-    text-align: left;
-}
+
 .dotProject{
-    margin-top: 9px;
+    margin-top: 5px;
     margin-left: 6px;
     margin-right: 5px;
 }
@@ -125,12 +112,12 @@
 }
 
 .logo-w-little {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 1.8rem;
+    height: 1.8rem;
     border-radius: 50%;
-    font-size: 15px !important;
+    font-size: 14px;
     color: white;
-    /* letter-spacing: 1.72px; */
+    letter-spacing: 1.72px;
     font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
     margin-right: 6px;
@@ -193,7 +180,9 @@
 .inputSearchTask {transition-timing-function: ease-in-out;}
 
 
-  
+#buttonCancleSelect{
+    /* display: none; */
+}
 
 #selectProjectInAllTask{
     display: none;
@@ -218,22 +207,22 @@
 }
 
 .propertiesAllTask{ 
-    text-align: left;
-    font: normal normal bold 14px/19px Roboto;
-    letter-spacing: 0px;
-    color: #68C7CB;
-    text-transform: capitalize;
-    padding-left: 59px;
+text-align: left;
+font: normal normal bold 14px/19px Roboto;
+letter-spacing: 0px;
+color: #68C7CB;
+text-transform: capitalize;
+/* padding-left: 59px; */
 }
-.btn-open-details .svg-inline--fa{
-    vertical-align:-0.2em !important ;
-}
+
 .headerTableTask{
     background: #68c7cb1a  0% 0% no-repeat padding-box !important;
-    /* width: 100%; */
+    width: 100%;
 }
 
-
+.allTasks{
+    /* margin-top:21vh !important; */
+}
 .nameTaskNotBelong{
     text-align: left !important;
     text-overflow: ellipsis;
