--- a/src/component/hub/project/shareProject/shareProject.css
+++ b/src/component/hub/project/shareProject/shareProject.css
@@ -37,10 +37,9 @@ color: #75798E;
     background: #EDF8F6 0% 0% no-repeat padding-box;
 border-radius: 3px;
 width: 21vw;
-height: 5vh;
+height: 33px;
 color: #75798E;
 text-align: left;
 }
 .select_permission{
-height: 5vh;
 }
