--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
@@ -1,217 +1,218 @@
-.filesForProject{
-   
-}
-h3{
-    font-family: Roboto;
-    font-weight: 600;
-}
-#title{
-  padding-top: 2rem;
-}
-.viewFile:focus{
-  
-
-}
-.bcw{
-  background-color: #fff;
-}
-.wrapImg{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 15vh;
-}
-.wrapLink{
-    background-color: #EDFBFC ;
-     text-align: center;
-}
-.wrapLink a{
-       color: #707070;
-       text-decoration: none; 
-       cursor: pointer;
-}
-.imgFile{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    max-width: 100%;
-    max-height: 100%;
-}
-.iconControl{
-    display: inline;
-    border-radius: 50%;
-    background-color: #E8EAEC;
-    width: 2rem;
-    height: 2rem;
-    opacity: 0.5;
- }
- .iconControl:hover{
-     cursor: pointer;
- }
- .iconControl:active{
-     background-color: #38B1B5;
- }
- .fileItem{
-     border: gray;
-     box-shadow: gray 1px 1px 1px 1px;
-     cursor: pointer;
- }
- .fileItem:hover{
-    box-shadow: gray 2px 2px 2px 2px;
- }
-
-
-.fileItemFocus{
-    box-shadow: slateblue 2px 2px 2px 2px;
-}
- 
- .imageIcon{
-    height: 1rem;
- }
- 
- .iconsList{
-    text-align: center;
-    width: 7rem;
-    justify-content: flex-end;
-  float: right;
-  padding-top: 3rem;
-  padding-right: 0;
- }
- 
-.stripeToSavePlace{
-    color:#ffffff00;
-    margin-right: 0.2rem;
-     margin-left: 0.2rem;
- }
- /* .selectFile{
-     width: 10%;
-     height: 10%;
-     background-color: gray;
-     float: left;
-     position: absolute;
-     border-radius: 30%;
-     border: none;
- }
- .selectFile:checked{
-     color: #fff;
-    background-color:  #38B1B5;
-    border: none;
- } */
-
-
-
-
-
-
- /* ============================================    */
- .selectFile:first-child {
-    color: #778CA2;
-    cursor: pointer;
-    float: left;
+ .filesForProject{
+    width: 100% !important;
+    height: 100% !important;
   }
-  /* .selectFile button {
-    color: #778CA2;
-    background-color: transparent;
-    vertical-align: middle !important;
+  h3{
+      font-family: Roboto;
+      font-weight: 600;
+  }
+  #title{
+    padding-top: 2rem;
+  }
+  .viewFile:focus{
+    
   
   }
-  
-  .selectFile button:focus{
-    outline: 0;
-  } */
-  
-  /* .selectFile:nth-child(2){
-    text-align: left !important;
-  }
-  .selectFile:nth-child(3){
-    text-align: right !important;
-  }
-  
-  .selectFile1:nth-child(3){
-    text-align: left !important;
-    margin-left: -67px;
-    margin-top: 2px;
-  } */
-  /* .disabled{
-  color:gray ;
-  opacity: 0.5;
-  }
-  .selectFile{
-    padding-top:1vh !important;
-    font-size: 14px;
-    margin-bottom: 0px !important;
-    vertical-align: middle !important;
-  } */  
-  
-
-  .selectFile{
-    float: left;
-    /* position: absolute; */
-    margin: 0vw;
-    padding: 0;
-     cursor: pointer;
-     background-color: #707070;
-  }
-  /* Hide the browser's default checkbox */
-  .selectFile input {
-    position: absolute;
-    opacity: 0;
-   
-  width: 0;
-  height: 0;
-  }
-  
-  /* Create a custom checkbox */
-  .checkmarkFile {
-    position: absolute;
-    height: 1em;
-    width: 1em;
+  .bcw{
     background-color: #fff;
-    border: 1px solid #fff;
-        border-radius: 30%;
-   opacity: 0.8;
   }
-  /* .checkmarkFile-tabs{
-    left: 6% !important;
+  .wrapImg{
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      height: 15vh;
   }
-  .checkmarkFile-place{
-    top: 6px;
-    left: 0;
+  .wrapLink{
+      background-color: #EDFBFC ;
+       text-align: center;
+  }
+  .wrapLink a{
+         color: #707070;
+         text-decoration: none; 
+         cursor: pointer;
+  }
+  .imgFile{
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      max-width: 100%;
+      max-height: 100%;
+  }
+  .iconControl{
+      display: inline;
+      border-radius: 50%;
+      background-color: #E8EAEC;
+      width: 2rem;
+      height: 2rem;
+      opacity: 0.5;
+   }
+   .iconControl:hover{
+       cursor: pointer;
+   }
+   .iconControl:active{
+       background-color: #38B1B5;
+   }
+   .fileItem{
+       border: gray;
+       box-shadow: gray 1px 1px 1px 1px;
+       cursor: pointer;
+   }
+   .fileItem:hover{
+      box-shadow: gray 2px 2px 2px 2px;
+   }
+  
+  
+  .fileItemFocus{
+      box-shadow: slateblue 2px 2px 2px 2px;
+  }
    
-  } */
-  
-  
-  .selectFile:hover input ~ .checkmarkFile {
-    background-color: #FFFFFF;
-  }
-  
-  /* When the checkbox is checked, add a blue background */
-  .selectFile input:checked .checkmarkFile::before {
-    background-color:rgb(79, 216, 186);
-    content: "\2713";
-    opacity: 1;
-  }
-  
-  /* Create the checkmarkFile/indicator (hidden when not checked) */
-  .checkmarkFile:after {
-    content: "";
-    position: absolute;
-    opacity:1;
-    /* display: none; */
-  }
-  
-  /* Show the checkmarkFile when checked */
-  .selectFile input:checked ~ .checkmarkFile:after {
-    display: block;
-    background-color:#38B1B5 ;
-    content: "\2713";
-    font-size:0.9vw;
-    font-weight: bolder;
-    color: white;
-    width:-webkit-fill-available;
-    height: -webkit-fill-available;
-    opacity: 1;
-    border-radius: 30%;
-    transition: 0.2s;
+   .imageIcon{
+      height: 1rem;
+   }
    
-  }
+   .iconsList{
+      text-align: center;
+      width: 7rem;
+      justify-content: flex-end;
+    float: right;
+    padding-top: 3rem;
+    padding-right: 0;
+   }
+   
+  .stripeToSavePlace{
+      color:#ffffff00;
+      margin-right: 0.2rem;
+       margin-left: 0.2rem;
+   }
+   /* .selectFile{
+       width: 10%;
+       height: 10%;
+       background-color: gray;
+       float: left;
+       position: absolute;
+       border-radius: 30%;
+       border: none;
+   }
+   .selectFile:checked{
+       color: #fff;
+      background-color:  #38B1B5;
+      border: none;
+   } */
+  
+  
+  
+  
+  
+  
+   /* ============================================    */
+   .selectFile:first-child {
+      color: #778CA2;
+      cursor: pointer;
+      float: left;
+    }
+    /* .selectFile button {
+      color: #778CA2;
+      background-color: transparent;
+      vertical-align: middle !important;
+    
+    }
+    
+    .selectFile button:focus{
+      outline: 0;
+    } */
+    
+    /* .selectFile:nth-child(2){
+      text-align: left !important;
+    }
+    .selectFile:nth-child(3){
+      text-align: right !important;
+    }
+    
+    .selectFile1:nth-child(3){
+      text-align: left !important;
+      margin-left: -67px;
+      margin-top: 2px;
+    } */
+    /* .disabled{
+    color:gray ;
+    opacity: 0.5;
+    }
+    .selectFile{
+      padding-top:1vh !important;
+      font-size: 14px;
+      margin-bottom: 0px !important;
+      vertical-align: middle !important;
+    } */  
+    
+  
+    .selectFile{
+      float: left;
+      /* position: absolute; */
+      margin: 0vw;
+      padding: 0;
+       cursor: pointer;
+       background-color: #707070;
+    }
+    /* Hide the browser's default checkbox */
+    .selectFile input {
+      position: absolute;
+      opacity: 0;
+     
+    width: 0;
+    height: 0;
+    }
+    
+    /* Create a custom checkbox */
+    .checkmarkFile {
+      position: absolute;
+      height: 1em;
+      width: 1em;
+      background-color: #fff;
+      border: 1px solid #fff;
+          border-radius: 30%;
+     opacity: 0.8;
+    }
+    /* .checkmarkFile-tabs{
+      left: 6% !important;
+    }
+    .checkmarkFile-place{
+      top: 6px;
+      left: 0;
+     
+    } */
+    
+    
+    .selectFile:hover input ~ .checkmarkFile {
+      background-color: #FFFFFF;
+    }
+    
+    /* When the checkbox is checked, add a blue background */
+    .selectFile input:checked .checkmarkFile::before {
+      background-color:rgb(79, 216, 186);
+      content: "\2713";
+      opacity: 1;
+    }
+    
+    /* Create the checkmarkFile/indicator (hidden when not checked) */
+    .checkmarkFile:after {
+      content: "";
+      position: absolute;
+      opacity:1;
+      /* display: none; */
+    }
+    
+    /* Show the checkmarkFile when checked */
+    .selectFile input:checked ~ .checkmarkFile:after {
+      display: block;
+      background-color:#38B1B5 ;
+      content: "\2713";
+      font-size:0.9vw;
+      font-weight: bolder;
+      color: white;
+      width:-webkit-fill-available;
+      height: -webkit-fill-available;
+      opacity: 1;
+      border-radius: 30%;
+      transition: 0.2s;
+     
+    }
