--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
@@ -1,5 +1,6 @@
 .filesForProject{
-   
+   background-color: white;
+   border-radius: 2%;
 }
 h3{
     font-family: Roboto;
@@ -16,7 +17,10 @@ h3{
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 15vh;
+   
+}
+.wrapImg img{
+  height: 10vh;
 }
 .wrapLink{
     background-color: #EDFBFC ;
@@ -26,6 +30,10 @@ h3{
        color: #707070;
        text-decoration: none; 
        cursor: pointer;
+       font-size: 1rem;     
+   -webkit-line-clamp: 1;
+   overflow: hidden;
+   display: -webkit-box;
 }
 .imgFile{
     background-position: center;
@@ -166,7 +174,7 @@ h3{
     background-color: #fff;
     border: 1px solid #fff;
         border-radius: 30%;
-   opacity: 0.8;
+   opacity: 0.9;
   }
   /* .checkmarkFile-tabs{
     left: 6% !important;
@@ -186,14 +194,14 @@ h3{
   .selectFile input:checked .checkmarkFile::before {
     background-color:rgb(79, 216, 186);
     content: "\2713";
-    opacity: 1;
+    opacity: 0.8;
   }
   
   /* Create the checkmarkFile/indicator (hidden when not checked) */
   .checkmarkFile:after {
     content: "";
     position: absolute;
-    opacity:1;
+    opacity:0.8;
     /* display: none; */
   }
   
@@ -207,7 +215,7 @@ h3{
     color: white;
     width:-webkit-fill-available;
     height: -webkit-fill-available;
-    opacity: 1;
+    opacity: 0.8;
     border-radius: 30%;
     transition: 0.2s;
    
