--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -111,3 +111,6 @@ opacity: 0.15;
     pointer-events: none !important;
     opacity:0.5;
 }
+.pencil-status-none{
+    display: none !important;
+}
