gant good button back assighn task

--- a/src/component/Gantt/DisplayGantt/displayGantt.css
+++ b/src/component/Gantt/DisplayGantt/displayGantt.css
@@ -6,3 +6,13 @@
     resize: both;
     overflow: auto
 }
+
+.gantt_task_line {
+
+    border-radius: 5px !important;
+    border:  #F8B520 3px solid !important;
+    background-color: white !important;
+}
+.gantt_task_content {
+    background-color: #ffff !important;
+}
