--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 .view-cards-tabs .card-body{
-     max-height:  70vh;/* בינתיים */
+     max-height:  80vh;/* בינתיים */
     /* background: transparent linear-gradient(360deg, #87C5FE30 0%, #ebfff8 100%) 0% 0% no-repeat padding-box; */
     background-color:#EDFBFC !important ;
     border-radius: 0px 0px 8px 8px;
@@ -66,6 +66,7 @@ span:focus{
   text-decoration: none !important;
   font-weight: bold !important;
     font-size: 15px !important;
+margin: auto !important;    
 }
 .allTaskInCard div{
   /* padding-right: 5px !important;
