--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -11,7 +11,12 @@
 /* .check-task input:hover ~ .checkmark{
     background-color:#f6f7f8 !important;
 } */
-
+.imgInTask{
+    width: 100%;
+    height: 100px;
+    display: block;
+    margin-top: 14px;
+}
 .task-name-span{
     text-indent: 5vh !important;
 }
