--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -12,13 +12,20 @@
 }
 
 
-.headerProjects{
+.contentHeaderProjects{
     height: 45px;
 }
-
+.headerProjects{
+    background-color: white;
+    
+    /* flex: 0 0 83.333333%; */
+    /* width: 80.333333%; */
+    /* position: absolute; */
+    /* z-index: 99; */
+}
 .betweenHeaderProjects{
     margin-top: 13px;
-    margin-right: 13px !important;
+    margin-right: 0px !important;
     justify-content: space-between;
     display: flex;
     margin-left: 2px;
@@ -29,6 +36,7 @@
     margin-left: 1.08rem;
     padding-left: 15px;
     padding-bottom: 5px;
+    margin-right: 11px !important;
 }
 .projectForWorkspace:hover .progressProject {
     background-color: rgb(233, 236, 239) !important;
@@ -70,9 +78,9 @@ margin-right: 11px;
 }
 .inputSearchProject
 {
-    margin-top: 4px;
+    margin-top: -4px;
     padding-top: 5px;
-
+    height: 36px
 }
 
 .inputSearchProject input , 
@@ -88,14 +96,14 @@ margin-right: 11px;
     outline: none;
     padding-right: 6px;
     padding-top: 4px;
+    font-size: revert;
+    
 }
 
 .inputSearchProject div{
-
     border-top-right-radius: 50rem !important;
     border-bottom-right-radius: 50rem !important;
-   
-    padding-right: 9px;
+    padding-right: 14px;
     padding-top: 8px;
     color: #0000006e;
 }
@@ -107,21 +115,21 @@ margin-right: 11px;
 
 
 .buttonNewProject{
-    width: 135px;
-    height: 40px;
+    width: 116px;
+    height: 36px;
     background: var(--unnamed-color-52c4a9) 0% 0% no-repeat padding-box;
     background: #1FB9C1 0% 0% no-repeat padding-box;
     border-radius: 5px;
     color:white;
-    font: normal normal normal 16px/21px Roboto;
+    font: normal normal normal 13px/12px Roboto;
     letter-spacing: 0px;
     text-transform: capitalize;
     padding: 0px;
+    padding-right: 5px;
+    padding-left: 5px;  
 }
 .body .table-responsive{
-    /* height: 65vh;
-    overflow: auto; */
-    /* margin-top: 14vh; */
+    /* margin-top: 57px; */
 }
 
 
