--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -18,7 +18,7 @@
       font-weight: 600;
   }
   .details .form-control , .details  .css-yk16xz-control{
-      background-color: hsla(196, 44%, 95%, 1) !important;
+      background-color: #EDFBFC!important;
       border:none !important;
 
       /* color: var(--unnamed-color-0a102e); */
