--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -27,7 +27,9 @@
 margin-right: 0px;
 }
 #tabsAndList{
-        padding-bottom: 8px;
+        /* padding-bottom: 8px; */
+        justify-content: flex-end;
+        align-items: center;
 }
 .listInSelect, .tabsInSelect{
         border-bottom: 2px solid rgb(210, 200, 200) !important}
