--- a/src/component/hubFeature/chart/chart.css
+++ b/src/component/hubFeature/chart/chart.css
@@ -1,5 +1,11 @@
+/* .chartRow{
+    height:30vh;
+} */
 .colorDiv{
-    width: 15vw;
+    width: 100%;
+}
+.colorName{
+    font-size:1vw;
 }
 .chartCol{
     border: 0.1em solid rgb(204 238 240);
