--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -119,6 +119,9 @@
     text-overflow: ellipsis;
     text-align: left;
 }
+.project-select-not-belong{
+    margin-left:10px;
+}
 .dotProject{
     margin-top: 9px;
     margin-left: 6px;
@@ -256,6 +259,22 @@
   }
 .btn-open-details .svg-inline--fa{
     vertical-align:-0.2em !important ;
+}
+.selectInTasksNotBelong{
+    transition: border-radius 0.2s,background-color 0.2s;
+}
+.selectInTasksNotBelong:hover{
+    background-color: #eeefef;
+    border-radius: 22px;
+    /* margin-top: 7px; */
+}
+.selectWorkspaceInTasksNotBelong:hover{
+     margin-left: 7px;
+}
+.btn-open-details:hover{
+    background-color: #E8EAEC;
+    border-radius: 5px;
+    padding:5px;
 }
 .headerTableTask{
     background: #68c7cb1a  0% 0% no-repeat padding-box !important;
