--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -67,7 +67,9 @@
    font-family: 'Roboto', sans-serif;
    font-size: 1.6rem;
    /* margin-top:9px; */
+   background-color: #778CA2;
 }
+
 #sevaNewWorkspace{
 }
 /* .close{
