--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -95,7 +95,7 @@ margin-right: 11px;
     border: none;
     border-top-right-radius: 5px !important;
     border-bottom-right-radius: 5px !important;
-    padding-left: 12px;
+    padding-left: 5px;
     padding-bottom: 4px;
     border: #1FB9C1 solid 1.5px;
     border-left: none;
@@ -109,13 +109,18 @@ margin-right: 11px;
 .inputSearchProject div{
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 5px !important;
-    padding-left: 14px;
-    padding-top: 8px;
+    padding-left: 6px;
+    padding-top: 7px;
     border: #1FB9C1 solid 1.5px;
     border-right: none;
     color: #1FB9C1;
 }
 
+
+.inputSearchProject div img{
+    height: 14px;
+    width: 14px;
+}
 /* .inputSearchProjects:hover {
   width: 300px;
 } */
