--- a/src/component/hub/project/shareProject/shareProject.css
+++ b/src/component/hub/project/shareProject/shareProject.css
@@ -1,6 +1,6 @@
 .div_share_with{
     width: 29vw;
-height: 42vh;
+height: 32vh;
 background: #EDFBFC 0% 0% no-repeat padding-box;
 border-radius: 3px;
 /* opacity: 0.11; */
@@ -11,11 +11,12 @@ overflow-x: hidden;
 left: 0; */
 }
 .txt_share{
-    font: bold 16px/21px Roboto;
+    font: normal normal normal 13px/15px Roboto;
     color: #0A102E;
+    padding-left: 1px;
 }
 .txt_description_share{
-    font: normal normal normal 14px/21px Roboto;
+    font: normal normal normal 11px/21px Roboto;
 letter-spacing: 0.32px;
 color: #75798E;
 }
