--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -106,7 +106,7 @@ margin: auto !important;
     border:1px solid #52C4A9!important;
 }
 .task-card input{
-  margin-top:20px !important; 
+  /* margin-top:20px !important;  */
 
 }
 .task-card p{
