--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -28,8 +28,21 @@
   }
 .addWorkspace{
   border:1px #778CA2 dashed ;
+}
+.addWorkspace:hover
+ {
+  border: 1px #1f263ccc solid;
+}
+
+
+.addWorkspace:hover  .logo-w{
+  background-color: #1f263ccc;
+}
+.addWorkspace:hover div  .name1 p{
+  color:#1f263ccc !important;
 
 }
+
 .logoGif{
   /* margin-top: -5vh; */
   /* margin-left: auto !important;
