--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -18,7 +18,8 @@
     margin-top: 14px;
 }
 .task-name-span{
-    text-indent: 5vh !important;
+    /* text-indent: 5vh !important; */
+    /* display: inline-block !important; */
 }
 /* .input-card-name{
     height: 65vh !important;
