--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -1,12 +1,20 @@
 .body{
-  height: 82.7vh;;
+  height: 84.7vh;;
   background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;  
     overflow-y: auto!important;
     box-shadow: 0px 3px 6px #00000029;
 
+  }
 
+  .bodyListTak{
+    height: 82.7vh;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+    overflow-y: auto!important;
+    box-shadow: 0px 3px 6px #00000029;
   }
   @media screen and (min-width: 1550px) {
     .body {
