--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -3,6 +3,14 @@
       overflow-x: auto !important;
       /* overflow-y: hidden !important; */
 }
+.body-cards{
+  height: 82.7vh;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+    overflow-y: auto!important;
+    box-shadow: 0px 3px 6px #00000029;
+}
 @media screen and (min-width: 770px) {
     .wraperr-tabs >.row{
   
