--- a/src/component/hub/uploadFile/file/file.css
+++ b/src/component/hub/uploadFile/file/file.css
@@ -12,11 +12,19 @@
 .imgFileInTask img
 {
     height: 64px;
-    width: 75px !important;
+    width: 88px !important;
     padding-top: 8px;
     padding-bottom: 8px;
-    padding-left: 8px;
-    padding-right: 4px;
+    padding-left: 30px;
+}
+
+.fileNotImgInTask a img,
+.fileNotImgInTask  img{
+    height: 64px;
+    width: 88x !important;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 30px;
 }
 .fontAwesomeIconFile
 {
@@ -27,7 +35,10 @@
     padding-left: 32px;
     padding-right: 4px;
 }
+.imgActionFile{
+  cursor: pointer;
 
+}
 .pdfFile{
     color:red
 
