--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -2,7 +2,7 @@
    cursor: pointer;
    /* color: black; */
    font-size: small;
-   width: 7.2rem;
+   width: 7.6rem;
    background-color: #F6F6FA;
    height: 8rem;
    margin-bottom: 10px;
@@ -140,18 +140,17 @@ opacity: 0.9;
 
 }
 .name1> p{
-   color:#778CA2 !important;
-font:  normal normal 14px/17px Roboto;
-font-weight: 400;
-
+   font: normal normal normal 14px/18px Roboto;
+   color: #778CA2;
 }
-/*  */
 .iconsAction{
    display: none;
 }
 
 .imageIcon{
-   height: 1rem;
+   height: 0.8rem;
+   padding-right: 2px;
+    padding-left: 2px;
 }
 
 .iconsActions{
@@ -168,7 +167,8 @@ font-weight: 400;
 }
 .productionDateW{
    margin-bottom: 0px !important;
-
+   color: #98A9BC;
+   font-size: smaller;
 }
 
 .nameWorkspaceInGrid{
