--- a/src/component/hubFeature/Overview/hangout/hangout.css
+++ b/src/component/hubFeature/Overview/hangout/hangout.css
@@ -1,10 +1,11 @@
 .iframeHangout{
-    height:80%;
+    height:58vh;
+    width: 100%;
     border: none;
-    z-index: 101;
-    right:2% ; 
-    position: fixed; 
-    bottom: 0%;
+    /* z-index: 101; */
+    /* right:2% ;  */
+    /* position: fixed;  */
+    /* bottom: 0%; */
  }  
     /* position: absolute;
     right:calc(5% + 4vw) ;
