--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -8,6 +8,7 @@
     letter-spacing: 0px;
     color: #0A102E;
     overflow-y: auto;  
+    overflow-x: hidden;
 
 }
 
@@ -168,6 +169,7 @@ margin: auto !important;
     background-color: #EDFBFC ;
     width: 6px;
   }
+  
    
     /* Track */
     .view-cards-tabs .card-body::-webkit-scrollbar-track {
