--- a/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
@@ -69,9 +69,13 @@
 .WorkspaceList{
     cursor: pointer ;
     border-bottom:#F6F6FA 1px solid ;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    padding-left: 8px;
+
     display: flex;
     justify-content:space-between; 
-    width: 73.2vw;
+    width: 76vw;
 }
 
 .stripe{
