design workspace list

--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -86,7 +86,7 @@ margin: auto !important;
   /* margin-bottom: 9px; */
 }
 .allTaskInCard div:hover{
-  border-color:#52C4A9  !important;
+  /* border-color:#52C4A9  !important; */
 
   }
 
