--- a/src/component/hubFeature/Overview/members/addMembers/addMembers.css
+++ b/src/component/hubFeature/Overview/members/addMembers/addMembers.css
@@ -12,11 +12,14 @@
     font-size:4vw;
     font-weight:600;
     height: 100%;
-
 }
 .divAddMembers:hover , .divAddMembers:hover .fontAddMembers {
     color:#38B1B5 !important;
     cursor: pointer;
 }
-.divAddMembers:hover .addMembers{border-color:#38B1B5}
+.divAddMembers:hover .addMembers{
+    border-color:#38B1B5
+}
+
+
 
