--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -79,7 +79,8 @@ margin-right: 11px;
 .inputSearchProject
 {
     margin-top: -4px;
-    padding-top: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     height: 36px
 }
 
@@ -129,7 +130,7 @@ margin-right: 11px;
 
 .buttonNewProject{
     width: 116px;
-    min-height: 30px;
+    min-height: 33px;
     height: fit-content;
     background: var(--unnamed-color-52c4a9) 0% 0% no-repeat padding-box;
     background: #1FB9C1 0% 0% no-repeat padding-box;
