--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -49,6 +49,6 @@
   
   /* Handle on hover */
   .body-workspace::-webkit-scrollbar-thumb {
-    background: #919494; 
+    background: #b0b1b1; 
   }
   
