--- a/src/component/hubFeature/Overview/members/listMembers/listMembers.css
+++ b/src/component/hubFeature/Overview/members/listMembers/listMembers.css
@@ -12,9 +12,21 @@
 }
 .membersToAdd{
     border:1px solid rgb(196, 184, 184);
-    border-radius:5%;
-    box-shadow: 1px 1px 1px rgb(196, 184, 184) ;
+    /* box-shadow: 1px 1px 1px rgb(196, 184, 184) ; */
 }
 .inputSearch{
-    justify-content:center;
+    background-color: #EDFBFC;
+    border:none;
+    width:100%
+}
+.inputAdd{
+    border: none;
+    background-color: #EDFBFC;
+}
+.inputSearch:focus, .inputAdd:focus{
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+}
+.buttonAdd{
+    background-color: rgb(153, 226, 229);
 }
