--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -234,7 +234,7 @@ height: 0;
 }
 .dnd-icon{
 opacity: 0;
-margin-top: -10px !important;  
+/* margin-top: -10px !important;   */
 /* display: none; */
 }
 .view-details-in-list{
