--- a/src/component/hub/project/newProject/newProject.css
+++ b/src/component/hub/project/newProject/newProject.css
@@ -14,6 +14,9 @@
   height: auto;
   overflow: auto;
   min-height: 20vh;
+  background-color: #EDFBFC!important;
+    border: none !important;
+    text-align: left;
   /* width: 97%; */
   /* margin-left: 2%; */
 }
