--- a/src/component/hubFeature/Overview/overview.css
+++ b/src/component/hubFeature/Overview/overview.css
@@ -15,3 +15,10 @@
     /* border-bottom: 1px solid #E9E9E9; */
     background-color: white;
   }
+
+.downWidthHangoutAndLogs{
+}
+
+.scrollbarOverview2{
+  width:100%;
+}
