design platform task and status

--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -48,7 +48,7 @@ opacity: 0.9;
 border-bottom: 1px solid gray;
 }
 .add-status  , .edit-status{
-    background-color:  #3598F4;
+    background-color:  hsla(183, 72%, 44%, 1);
 border-radius: 5px;
 color: white;
 opacity: 0.9;
@@ -61,7 +61,7 @@ opacity: 0.9;
     opacity: 0.4;
 }
 .circle-picker {
-    width: 140% !important;
+    width: 100% !important;
 }
 .pencil-status{
     display: inline;
@@ -90,6 +90,7 @@ overflow-x: hidden !important;
   display: inline-block;
 }
 .status-list{
+    margin-bottom:3vh;
     margin-top: 1vh;
     max-height: 150px;
     /* overflow-y: auto; */
