design platform task and status

--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -85,7 +85,7 @@
 }
 .due-date-hover p {
     font-size: smaller !important;
-    color:red !important;
+    color:#68C7CB!important;
 }
 .like-hover p{
     font-size: smaller !important;
