--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
@@ -16,6 +16,7 @@
 #title{
     font-family: Roboto;
     font-weight: 700;
+    font-size: larger;
     cursor: pointer;
       padding-top: 2rem;
     display: inline-block;
@@ -26,7 +27,7 @@
 }
 .cardNameTitle{
   display: inline-block;
-  margin-left:3rem ;
+  margin-left:2rem ;
 }
 /* #title{
 
