--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -126,6 +126,9 @@ z-index: 9999 !important;
     display: inline-block;
 
 }
+#assing{
+  padding:4px !important;
+}
 .dropdown-toggle::after {
   /* float: right; */
   margin-top: 11px;
