--- a/src/component/hub/contact/contact.css
+++ b/src/component/hub/contact/contact.css
@@ -172,6 +172,7 @@ body {
     z-index: 999999999;
   overflow: auto;
    box-shadow: 0px 3px 6px #00000029;
+   overflow:hidden !important ;
 }
 .div_contacts_list{
   overflow-y: auto;
